--- a/Day 01 - Expanding Cards/style.css
+++ b/Day 01 - Expanding Cards/style.css
@@ -31,6 +31,7 @@ body {
   flex: 0.5;
   margin: 10px;
   position: relative;
+  transition: flex 0.7s ease-in;
 }
 
 .panel h3 {
@@ -40,6 +41,15 @@ body {
   left: 30px;
   margin: 0;
   opacity: 0;
+}
+
+.panel.active {
+  flex: 5;
+}
+
+.panel.active h3 {
+  opacity: 1;
+  transition: opacity 0.3s ease-in 0.4s;
 }
 
 @media (max-width: 480px) {
