--- a/Day 08 - Form Wave Animation/style.css
+++ b/Day 08 - Form Wave Animation/style.css
@@ -72,15 +72,33 @@ body {
   width: 100%;
   padding: 15px 0;
   font-size: 18px;
+  z-index: 144;
 }
 
 .form-control input:focus,
 .form-control input:valid {
   outline: 0;
+  border-bottom-color: lightblue;
 }
 
 .form-control label {
   position: absolute;
   top: 15px;
   left: 0;
+  cursor: text;
+  user-select: none;
+}
+
+.form-control label span {
+  display: inline-block;
+  font-size: 18px;
+  min-width: 5px;
+  transition: transform 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition-property: transform, color;
+}
+
+.form-control input:focus + label span,
+.form-control input:valid + label span {
+  color: lightblue;
+  transform: translateY(-30px);
 }
