Tweak Day 17's -- Movie App -- description box

--- a/Day 17 - Movie App/style.css
+++ b/Day 17 - Movie App/style.css
@@ -69,10 +69,6 @@ main {
   letter-spacing: 0.5px;
 }
 
-.movie-info h3 {
-  /* margin-top: 0; */
-}
-
 .movie-info span {
   background-color: var(--primary-color);
   padding: 0.25rem 0.5rem;
@@ -93,7 +89,8 @@ main {
 }
 
 .overview {
-  background-color: #fff;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.85);
   padding: 2rem;
   position: absolute;
   left: 0;
