--- a/Day 24 - Content Placeholder/style.css
+++ b/Day 24 - Content Placeholder/style.css
@@ -11,7 +11,6 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  overflow: hidden;
   margin: 0;
 }
 
@@ -19,11 +18,20 @@ img {
   max-width: 100%;
 }
 
+.card-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
 .card {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   overflow: hidden;
   width: 350px;
+  margin: 25px;
 }
 
 .card-header {
