--- a/Day 29 - Double Click Heart/style.css
+++ b/Day 29 - Double Click Heart/style.css
@@ -9,14 +9,18 @@ body {
   text-align: center;
   overflow: hidden;
   margin: 0;
+  color: #3bba9c;
+  background-color: #2e3047;
 }
 
 h3 {
+  font-size: 2rem;
   margin-bottom: 0;
   text-align: center;
 }
 
 small {
+  font-size: 1rem;
   display: block;
   margin-bottom: 20px;
   text-align: center;
@@ -31,7 +35,7 @@ small {
   width: 300px;
   background: url('https://source.unsplash.com/random') no-repeat center
     center/cover;
-  margin: auto;
+  margin: 1rem auto;
   cursor: pointer;
   max-width: 100%;
   position: relative;
