--- a/Day 31 - Password Generator/style.css
+++ b/Day 31 - Password Generator/style.css
@@ -25,10 +25,12 @@ h2 {
 
 .container {
   background-color: #23235b;
-  box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
+  box-shadow: 2px 5px 10px rgba(255, 255, 255, 0.2);
   padding: 20px;
   width: 350px;
   max-width: 100%;
+  position: relative;
+  border-radius: 5px;
 }
 
 .result-container {
@@ -42,6 +44,7 @@ h2 {
   padding: 12px 10px;
   height: 50px;
   width: 100%;
+  border-radius: 5px;
 }
 
 .result-container #result {
@@ -60,6 +63,7 @@ h2 {
 
 .btn {
   border: none;
+  border-radius: 5px;
   background-color: #3b3b98;
   color: #fff;
   font-size: 16px;
@@ -70,6 +74,25 @@ h2 {
 .btn-large {
   display: block;
   width: 100%;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn:hover {
+  background-color: hsl(240, 44%, 55%);
+}
+
+.btn:active {
+  transform: scale(0.98);
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.9);
+}
+
+#length {
+  border-radius: 5px;
+  text-align: center;
 }
 
 .setting {
@@ -77,4 +100,52 @@ h2 {
   justify-content: space-between;
   align-items: center;
   margin: 15px 0;
+}
+
+/* For copying the password */
+.container .btn-message {
+  /* background-color: #424242; */
+  background-color: #3b3b98;
+  border-radius: 5px;
+  width: 140px;
+  color: white;
+  letter-spacing: 1.5px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  display: none;
+  cursor: none;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  transform: translateX(-50%);
+}
+
+.container .btn-message:focus {
+  outline: none;
+}
+
+.shake {
+  animation: 1s shake;
+}
+
+@keyframes shake {
+  10%,
+  90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%,
+  80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%,
+  50%,
+  70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%,
+  60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
