--- a/Day 36 - Hoverboard/style.css
+++ b/Day 36 - Hoverboard/style.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  background-color: #111;
   font-family: 'Roboto', sans-serif;
   display: flex;
   align-items: center;
@@ -12,4 +13,25 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  max-width: 400px;
+}
+
+.square {
+  background-color: #1d1d1d;
+  box-shadow: 0px 0px 2px rgba(0 0 0 / 1);
+  height: 16px;
+  width: 16px;
+  margin: 2px;
+  transition: 2s ease;
+}
+
+.square:hover {
+  transition-duration: 0s;
 }
