--- a/Day 50 - Insect Catch Game/style.css
+++ b/Day 50 - Insect Catch Game/style.css
@@ -46,6 +46,7 @@ h1 {
   justify-content: center;
   height: 100vh;
   width: 100vw;
+  transition: margin 0.5s ease-out;
 }
 
 .screen.up {
@@ -113,7 +114,7 @@ h1 {
   left: 50%;
   transform: translate(-50%, -150%);
   line-height: 1.7;
-  background-color: rgba(0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   padding: 20px;
   z-index: 100;
