--- a/Day 20 - Button Ripple/style.css
+++ b/Day 20 - Button Ripple/style.css
@@ -19,12 +19,24 @@ button {
   background-color: purple;
   color: #fff;
   border: 1px purple solid;
-  font-size: 14px;
+  font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: 2px;
   padding: 20px 30px;
   overflow: hidden;
   margin: 10px 0;
+
+border-radius: 10px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+button:active {
+  transform: translateY(2px) scale(0.98);
+  box-shadow: 0 8px 5px rgba(0, 0, 0, 0.6);
 }
 
 button:focus {
